--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "version": "1.0.0",
   "description": "Express Api",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node ."
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^4.13.5"
+  }
 }
